translate missing german as good as possible

--- a/hd/lang/missing/lex_de.txt
+++ b/hd/lang/missing/lex_de.txt
@@ -1,212 +1,128 @@
     !dir
-de:
-
-    %s and %s have several unions
+de: %s und %s haben mehrere Verbindungen
 en: %s and %s have several unions
 fr: il y a plusieurs unions entre %s et %s
-de:
-
-    a brother-in-law/brothers-in-law/a sister-in-law/sisters-in-law
+de: Schwager/Schwäger/Schwägerin/Schwägerinnen
 en: one brother-in-law/brothers-in-law/one sister-in-law/sisters-in-law
 fr: un beau-frère/beaux-frères/une belle-sœur/belles-sœurs
-de:
-
-    a child-in-law/children-in-law
+de: Schwiegerkind/Schwiegerkinder
 en: one child-in-law/children-in-law
 fr: un bel-enfant/beaux-enfants
-de:
-
-    a half brother-in-law/half brothers-in-law/a half sister-in-law/half sisters-in-law
+de: Halbbruder/Halbbrüder/Halbschwester/Halbschwestern
 en: one half brother-in-law/half brothers-in-law/one half sister-in-law/half sisters-in-law
 fr: un demi beau-frère/demi beaux-frères/une demi belle-sœur/demi belles-sœurs
-de:
-
-    a half sibling-in-law/half siblings-in-law
+de: Halbgeschwister
 en: one half sibling-in-law/half siblings-in-law
 fr: un demi beau-frère ou belle-sœur/demi beaux-frères et belles-sœurs
-de:
-
-    a sibling-in-law/siblings-in-law
+de: Geschwister
 en: one sibling-in-law/siblings-in-law
 fr: un beau-frère ou belle-sœur/beaux-frères et belles-sœurs
-de:
-
-    a stepchild/stepchildren
+de: Stiefkind/Stiefkinder
 en: a stepchild/stepchildren
 fr: un bel-enfant/beaux-enfants
-de:
-
-    a stepson/stepsons/a stepdaughter/stepdaughters
+de: Stiefsohn/Stiefsöhne/Stieftochter/Stieftöchter
 en: one stepson/stepsons/one stepdaughter/stepdaughters
 fr: un beau-fils/beaux-fils/une belle-fille/belles-filles
-de:
-
-    activate/suppress
+de: einschalten/ausschalten
 en: activate/suppress
 fr: activer/supprimer
-de:
-
-    add the previous name as a first name alias
+de: den vorherigen Namen als ein Vornamen Alias hinzufügen
 en: add the previous name as a first name alias
 fr: ajouter le nom précédent comme un alias de prénom
-de:
-
-    add the previous name as a surname alias
+de: den vorherigen Namen als ein Nachnamen Alias hinzufügen
 en: add the previous name as a surname alias
 fr: ajouter le nom précédent comme un alias de nom
-de:
-
-    available genealogies
+de: verfügbare Stammbäume
 en: list of available genealogies (use gwsetup)
 fr: listes des généalogies disponibles (utilise gwsetup)
-de:
-
-    base
+de: Basis
 en: base
 fr: base
-de:
-
-    books
+de: Bücher
 en: books
 fr: dictionnaires
-de:
-
-    both
+de: beide
 en: both
 fr: les deux
-de:
-
-    brothers/sisters/siblings
+de: Brüder/Schwestern/Geschwister
 en: brothers/sisters/siblings
 fr: frères/sœurs/frères et sœurs
-de:
-
-    by couple
+de: von Ehepaar
 en: by couple
 fr: par couple
-de:
-
-    choose a genealogy
+de: einen Stammbaum wählen
 en: choose a genealogy
 fr: choisir une généalogie
-de:
-
-    collapse implex
+de: Implex einklappen
 en: collapse implex
 fr: réduire les implexes
-de:
-
-    compact tree
+de: Baum einklappen
 en: compact tree
 fr: arbre compact
-de:
-
-    compiled on %s from commit %s
+de: kompiliert am %s von commit %s
 en: compiled on %s from commit %s
 fr: compilé le %s à partir du commit %s
-de:
-
-    copy link
+de: link kopieren
 en: copy the link to the clipboard
 fr: copier le lien dans le presse-papier
-de:
-
-    couples
+de: Ehepaar
 en: couples
 fr: couples
-de:
-
-    custom event
+de: Benutzerdefiniertes Ereignis
 en: custom event
 fr: événement personnalisé
-de:
-
-    dag
+de: implex zusammenführen
 en: fusion implexes
 fr: fusionner les implexes
-de:
-
-    dag on/dag off
+de: dag zeigen/dag verbergen
 en: show dag/hide dag
 fr: afficher graphe orienté acyclique (dag)/masquer graphe orienté acyclique (dag)
-de:
-
-    date of baptism
+de: Datum der Taufe
 en: date of baptism
 fr: date du baptême
-de:
-
-    date of burial
+de: Datum der Beerdigung
 en: date of burial
 fr: date de la sépulture
-de:
-
-    dd/mm/yyyy
+de: dd/mm/yyyy
 en: DD/MM/YYYY
 fr: JJ/MM/AAAA
-de:
-
-    degree of kinship
+de: grad der Verwandtschaft
 en: degree of kinship
 fr: degré de parenté
-de:
-
-    descendant tree view
+de: Nachkommen Baumansicht
 en: descendant tree view
 fr: arborescence descendante
-de:
-
-    descendants tree
+de: Nachkommen Baum
 en: descendants tree
 fr: arbre de descendance
-de:
-
-    display implex
+de: Implex anzeigen
 en: display implex
 fr: afficher les implexes
-de:
-
-    do not
+de: nicht
 en: do not
 fr: ne pas
-de:
-
-    edit tree
+de: Baum editieren
 en: edit the graph
 fr: éditer le graphe
-de:
-
-    events to which %s was witness
+de: Ereignisse bei denen %s Trauzeuge war
 en: events to which %s was witness
 fr: évènements auxquels %s était témoin
-de:
-
-    events tree
+de: Ereignisbaum
 en: tree of events
 fr: arbre des événements
-de:
-
-    family time line
+de: Zeitleiste der Familie
 en: time line of the family
 fr: chronologie de la famille
-de:
-
-    font size
+de: Schriftgröße
 en: font size
 fr: taille de police
-de:
-
-    full tree
+de: vollständiger Baum
 en: full tree
 fr: arbre complet
-de:
-
-    full width/columns
+de: volle Breite/Spalten
 en: full width display/columns display
 fr: affichage pleine largeur/affichage sur deux colonnes
-de:
-
-    godparent
+de: Pate
 en: godparent
 fr: parrain ou marraine
 de:
@@ -214,314 +130,190 @@ de:
     h7-tree
 en: 7 generation H tree
 fr: arbre en H 7 générations
-de:
-
-    half-brothers/half-sisters/half-siblings
+de: Halbbrüder/Halbschwestern/Halbgeschwister
 en: half-brothers/half-sisters/half-siblings
 fr: demi-frères/demi-sœurs/demi-frères et sœurs
-de:
-
-    hide portraits
+de: Porttrait ausblenden
 en: hide portraits
 fr: ne pas afficher les portraits
-de:
-
-    his/her
+de: sein/ihr
 en: his/her
 fr: son/sa
-de:
-
-    home
+de: Wohnsitz
 en: home
 fr: accueil
-de:
-
-    horizontal tree
+de: horizontaler Baum
 en: horizontal tree
 fr: arborescence ascendante
-de:
-
-    htree
+de: H-Tree
 en: H-Tree
 fr: arbre en H
-de:
-
-    ignore implex
+de: Implex ignorieren
 en: ignore implex
 fr: ignorer les implexes
-de:
-
-    implex links
+de: Implex links
 en: link implexes
 fr: relier les implexes
-de:
-
-    implex/implexes
+de: Implex
 en: implex/implexes
 fr: implexe/implexes
-de:
-
-    inline chronology
+de: eingebetette zeitliche Abfolge
 en: simple chronology/detailed chronology
 fr: chronologie simple/chronologie détaillée
-de:
-
-    input database
+de: eingabe Datenbank
 en: Please, enter the name of the database you want to use:
 fr: Tapez à l’identique le nom de la généalogie que vous voulez utiliser :
-de:
-
-    intermediate revisions not shown
+de: Zwichenüberarbeitung nicht gezeigt
 en: intermediate revisions not shown
 fr: révisions intermédiaires masquées
-de:
-
-    itree
+de: I-Tree
 en: I-Tree
 fr: arbre en I
-de:
-
-    last diff
+de: letzte überarbeitung
 en: last revision
 fr: dernière révision
-de:
-
-    last sosa level not navigable
+de: letzte sosa-Nummer nicht navigierbar. Ahnenliste verwenden.
 en: last Sosa level not navigable. Use ancestors list.
 fr: le dernier niveau des Sosa n’est pas navigable. Utilisez la liste des ancêtres.
-de:
-
-    link back to parents
+de: link zurück zu Eltern
 en: link back to parents
 fr: lien retour vers les parents
-de:
-
-    link to children
+de: link zu Kindern
 en: link to children
 fr: lien vers les enfants
-de:
-
-    lists of books
+de: liste der Bücher
 en: lists of books
 fr: liste des dictionnaires
-de:
-
-    missing %s
+de: %s fehlend
 en: missing %s
 fr: %s manquant
-de:
-
-    missing date
+de: fehlendes Datum
 en: no date
 fr: sans date
-de:
-
-    missing image
+de: fehlendes Bild
 en: missing image
 fr: image manquante
-de:
-
-    modify family %s event order
+de: ändere Familie %s Ereignis reihenfolge
 en: permute the events of family %s
 fr: permuter les événements de la famille %s
-de:
-
-    modify person event order
+de: ändere Person Ereignis reihenfolge
 en: permute personnal events
 fr: permuter les événéments individuels
-de:
-
-    module
+de: Module
 en: module/modules
 fr: module/modules
-de:
-
-    move up/down
+de: nach oben/unten bewegen
 en: move up/move down/move up cursor/move down cursor
 fr: remonter/descendre/remonter le curseur/descendre le curseur
-de:
-
-    mtree
+de: mtree
 en: 9 generations H tree
 fr: arbre en H 9 générations
-de:
-
-    multi relations graph
+de: mehrfachbeziehungsdiagramm
 en: multi relations graph
 fr: graphe de relations multiples
-de:
-
-    name changed. update linked pages
+de: Name geändert. aktualisiere verlinkte Seiten
 en: The first name, name or occurrence of this person has changed. Please update the pages linked to the old key listed below.
 fr: Le prénom, nom ou occurrence de cette personne a changé. Pensez à mettre à jour les pages liées à l’ancienne clé ci-dessous.
-de:
-
-    navigate on tree
+de: auf Baum navigieren
 en: navigate on the tree
 fr: naviguer sur l’arbre
-de:
-
-    new name
+de: neuer Name
 en: new name
 fr: nouveau nom
-de:
-
-    of
+de: von
 en: of
 fr: de
-de:
-
-    officer/officer/officers
+de: Beamter/Beamte/Beamten
 en: officer/officer/officers
 fr: officiant/officiante/officiants
-de:
-
-    old name
+de: alter Name
 en: old name
 fr: ancien nom
-de:
-
-    on (weekday day month year)
+de: am
 en: on
 fr: le
-de:
-
-    one additional generation
+de: eine zusaätzliche Generation
 en: one additional generation
 fr: une génération en plus
-de:
-
-    options
+de: Optionen
 en: options
 fr: options
-de:
-
-    participant/participant
+de: Teilnehmer/Teilnehmerin
 en: participant/participant
 fr: participant/participante
-de:
-
-    previous/next diff
+de: vorheriger/nächster Vergleich
 en: previous revision/next revision
 fr: révision précédente/révision suivante
-de:
-
-    reduce/increase
+de: reduzieren/erhöhen
 en: reduce/increase
 fr: réduire/augmenter
-de:
-
-    relations of
+de: Verbindungen von
 en: relations of
 fr: relations de
-de:
-
-    relations tree
+de: Verbindungsbaum
 en: tree of relations
 fr: arbre des relations
-de:
-
-    remove last module
+de: letztes Modul entfernen
 en: remove the last added module
 fr: retirer le dernier module ajouté
-de:
-
-    reserved to friends or wizards
+de: Reserviert für Freunde oder Zauberer
 en: reserved to friends or wizards
 fr: réservée aux amis et magiciens
-de:
-
-    reset to
+de: zurücksetzen zu
 en: reset to
 fr: restaurer
-de:
-
-    scale
+de: Jahre nach Generation
 en: years by generation
 fr: années par génération
-de:
-
-    select p_mod
+de: auswahl persöhnlicher Module
 en: select personalized modules
 fr: selectionner les modules personnalisés
-de:
-
-    shortcuts
+de: Tastenkürzel
 en: keyboard shortcuts
 fr: raccourcis clavier
-de:
-
-    show implex
+de: Implex zeigen
 en: show implex
 fr: identifier les implexes
-de:
-
-    siblings of the great-grandparents
+de: Geschwister der Großeltern
 en: great-granduncles and great-grandaunts
 fr: arrières-grands-oncles et arrières-grands-tantes
-de:
-
-    size
+de: Maßstab
 en: scale
 fr: echelle
-de:
-
-    sons/daughters/children
+de: Söhne/Töchter/Kinder
 en: sons/daughters/children
 fr: fils/filles/enfants
-de:
-
-    spouses info
+de: Eheleute Informationen
 en: spouses informations
 fr: informations conjoints
-de:
-
-    tree of witnesses
+de: Baum von Trauzeugen
 en: tree of witnesses
 fr: arbre des témoins
-de:
-
-    uncheck
+de: abwählen
 en: uncheck
 fr: décocher
-de:
-
-    width
+de: Breite
 en: width
 fr: largeur
-de:
-
-    with root, spouses and unknowns
+de: mit Vorfahren, Eheleuten und Unbekannten
 en: with root ancestor, spouses and unknowns
 fr: avec l’ancêtre racine, les conjoints et les inconnus
-de:
-
-    witness at %s of
+de: Trauzeuge am %s von
 en: witness at %s of
 fr: témoin au %s de
-de:
-
-    witness tree
+de: Trauzeugen Baum
 en: tree of witnesses
 fr: arbre des témoins
-de:
-
-    witness/witnesses
+de: Trauzeuge/Trauzeugen
 en: witness/witnesses
 fr: témoin/témoins
-de:
-
-    witnesses at his events
+de: Trauzeugen bei seinen Ereignissen
 en: witnesses at his events
 fr: témoins à ses évènements
-de:
-
-    witnesses to events of
+de: Trauzeugen der Ereignisse von
 en: witnesses to events of
 fr: témoins aux évènements de
-de:
-
-    witnesses to my events and godparents
+de: Trauzeugen von meinen Ereignissen und Paten
 en: witnesses to my events and godparents
 fr: témoins à mes évènements et parrains/marraines
 de:
